# zcord

./: .editorconfig  .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: api.md  index.md
docs/assets/: zcord_original.xcf
docs/stylesheets/: extra.css
examples/: hello.py  send_message.py
zcord/: __init__.py  bot.py  errors.py  state.py  utils.py
zcord/enums/: __init__.py  channel.py  guild.py  interaction.py  message.py  sticker.py
zcord/http/: __init__.py  client.py  rest.py
zcord/models/: __init__.py  application.py  attachment.py  base.py  channel.py  embed.py  guild.py  interaction.py  message.py  poll.py  reaction.py  role.py  sticker.py  user.py
zcord/types/: __init__.py  channel.py  guild.py  message.py  role.py  snowflake.py  user.py
