[project]
name = "zcord"
version = "2026.0.1.dev4"
authors = [
    { name = "ZyubyL" }
]
description = "Minimalistic Discord API wrapper"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.13.5",
    "orjson>=3.11.9",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/thqnhz/zcord"
Issues = "https://github.com/thqnhz/zcord/issues"

[project.optional-dependencies]
speed = [
    "uvloop>=0.22.1",
]

[tool.ruff]
target-version = "py312"
line-length = 80

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # simplify
    "C4",  # comprehensions
    "RUF", # ruff-specific
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    {include-group = "docs"}
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
]
